# com.spotify.Client

./: .gitignore  README.md  com.spotify.Client.appdata.xml  com.spotify.Client.desktop  com.spotify.Client.json  com.spotify.Client.metainfo.xml  com.spotify.Client.yaml  com.spotify.Client.yml  ffmpeg-binutils-2.41.patch  ffmpeg-patch.patch  flathub.json  get-scale-factor.py  pyproject.toml  set-dark-theme-variant.py  spotify-bin  spotify-preload.c  spotifywm-patch.patch  update-release.py  xsettings.py
tests/: conftest.py  test_infrastructure_validation.py
